fix: align text to the left

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@ main {
   margin: 5em;
   text-align: center;
 }
+
+p {
+  text-align: left;
+}
